[tool.poetry]
name = "quart-boilerplate"
version = "0.1.0"
description = "A boilerplate"
authors = ["Edward Pasenidis <me@edpasenidis.tech>"]

[tool.poetry.dependencies]
python = "^3.8"
quart = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
